--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -2,7 +2,7 @@ name: Daily Learning Update
 
 on:
   schedule:
-    # Runs at 03:15 UTC (approx 08:45 AM IST)
+    # Runs at 03:15 UTC daily
     - cron: '15 3 * * *'
   workflow_dispatch:
 
@@ -13,31 +13,39 @@ jobs:
       contents: write
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: true
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
       - name: Run Update Script
-        run: python update.py
+        run: |
+          python update.py
+          echo "Update script finished. Checking files..."
+          ls -R logs/
 
-      - name: Commit and Push
+      - name: Commit and Push Changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           
           git add .
           
+          # Use git status to verify changes
           if git diff --staged --quiet; then
-            echo "No changes detected. Skipping commit."
-          else
-            echo "Changes detected. Committing..."
-            git commit -m "docs: daily learning update $(date +'%Y-%m-%d')"
-            echo "Attempting to push to origin main..."
-            # Using --force-with-lease to ensure we don't overwrite if repo state changed
-            git push origin main
+            echo "No changes were detected in the repository. Python script might have failed to write."
+            exit 0
           fi
+          
+          git commit -m "docs: autonomous daily learning update $(date +'%Y-%m-%d')"
+          
+          echo "Attempting authenticated push to origin..."
+          # This uses the GITHUB_TOKEN automatically for auth
+          git push origin HEAD:main || git push origin HEAD:master || (echo "Push failed. Check if branch is protected or permissions are insufficient." && exit 1)
